--- a/src/Components/screen1.css
+++ b/src/Components/screen1.css
@@ -5,6 +5,6 @@
     height: 550px;
     font-family: 'Montserrat', sans-serif;
     color: white;
-    display: 'flex';
+    display: 'fle';
     justify-content: 'space-evenly';
 }
